--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
     "react-toastify": "^11.0.3",
+    "react-use-sessionstorage": "^1.0.2",
     "tailwindcss": "^4.0.0"
   },
   "devDependencies": {
