--- a/package.json
+++ b/package.json
@@ -20,9 +20,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
-    "react-toastify": "^11.0.3",
-    "react-use-sessionstorage": "^1.0.2",
-    "tailwindcss": "^4.0.0"
+    "tailwindcss": "^4.0.0",
+    "use-session-storage-state": "^19.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
