--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-router-dom": "^7.1.3",
     "react-toastify": "^11.0.3",
     "tailwindcss": "^4.0.0",
-    "use-session-storage-state": "^19.0.1"
+    "use-session-storage-state": "^19.0.1",
+    "proxy": "[http://localhost:5000](http://localhost:5000)"
+
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
@@ -35,5 +37,6 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "vite": "^6.0.5"
+   
   }
 }
